# MEPhI_labs

AADS/: README.md
AADS/lab1/: Makefile
AADS/lab2/: Makefile  README.md
AADS/lab3a/: Makefile
AADS/lab3b/: Makefile  README.md
AADS/lab3b/lib/: app.h
AADS/lab4a/: Makefile  README.md
AADS/lab4a/lib/: app.h
AADS/lab4b/: main.c
AADS/lab4b/lib/: app.c
ASM/: README.md
ASM/lab1/: Makefile  README.md  lab.s
ASM/lab2/: Makefile  lab.s
ASM/lab3/: data.txt  lab.s
ASM/lab4/: CMakeLists.txt  lab.s
ASM/lab5/: CMakeLists.txt  README.md  main.c
ASM/lab5/lib/: CMakeLists.txt
ASM/lab5/lib/impl/: process_image.c  process_image.s
OOP/: README.md
OOP/lab1/: Makefile  README.md  main.cpp
OOP/lab1/lib/: list.h  matrix  matrix.cpp  matrix.h  utils.cpp  utils.h
OOP/lab2/: Makefile  README.md  main.cpp
OOP/lab2/lib/: app.cpp  app.h  nephroid.cpp  nephroid.h
OOP/lab2/tests/: testing.cpp
OOP/lab3/: Makefile  README.md
OOP/lab3/lib/: app.cpp  app.h  vector.cpp  vector.h
OOP/lab3/tests/: testing.cpp
OOP/lab4/: CMakeLists.txt  Doxyfile  Makefile  README.md  main.cpp
OOP/lab4/container/: container.h  container.ipp
OOP/lab4/lib/: app.cpp  app.h  container.h  container.inl  group.cpp  group.h  groupTable.cpp  groupTable.h  juniorStudent.cpp  juniorStudent.h  seniorStudent.cpp  seniorStudent.h  student.cpp  student.h
OOP/lab4/tests/: testing.cpp
lab1/: Makefile  README.md  lab1.c
lab2/: Makefile  README.md  main.c
lab3a/: README.md  main.c  start.sh  test.sh
lab3a/lib/: app.c  app.h  kek  kek.c
lab3a/lib/models/: item.h  keyspaces.c  keyspaces.h  main.h  table_model.c
lab3a/lib/views/: dialog  dialog.c  keyspace_view.h  table_view.c  table_view.h
lab3a/models/: item.c  key.h  keyspace1.c  keyspace1.h  keyspace2.c  keyspace2.h  table_model.c  table_model.h
lab3b/: README.md
lab3b/lib/: app.c  item_load.c  keyspace_load.c  loader_tools.c  loader_tools.h  table_load.с
lab3b/lib/controllers/: table_controller.h
lab3b/lib/models/: keyspace1.c  keyspace1.h  keyspace2.c  keyspace2.h
lab3b/lib/other/: common_helper.c  item_helper.c  item_helper.h  keyspace2_helper.h  readline.h  table_helper.h
lab3b/lib/views/: errors.c  menu.h  table_view.h
lab4a/: data.txt  main.c
lab4a/lib/: app.c
lab4a/lib/controllers/: tree_controller.c  tree_controller.h
lab4a/lib/models/: item.h  node.c  node.h
lab4a/lib/other/: readline.c
lab4a/lib/views/: dialog.c  (+2 more)
lab4a/models/: item.h  node.c  node.h  tree.c  tree.h
lab4b/: Makefile  README.md  data.txt
lab4b/lib/: app.c  app.h
lab5/: Makefile  README.md  city.csv  graph.c  graph.h  string_vector.c  string_vector.h  vector.c
lab5/lib/: app.c  app.h
(+61 files in other folders)
